@@ -1,3 +1,10 @@
+Wed Dec 18 16:49:40 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (gc_profile_clear, gc_profile_enable): remove rest_sweep().
+
+	* gc.c: check objspace->profile.current_record before inserting
+	  profiling record by new macro gc_prof_enabled().
+
 Wed Dec 18 14:32:06 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_exec.h (VM_DEBUG_STACKOVERFLOW): added.
